Wed Sep 24 04:42:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/performance.aspx:
        * utils/BMW/website/performance.aspx.cs:

          . Evaluation of a unit test does not occur until the user clicks
            the 'Evaluate' button, instead of performing the evaluation when
            the user changes their selection.

        * utils/BMW/website/styles/default.css:

          . Updated several of the style classes.

Wed Sep 24 03:56:22 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Implemented a stored procedure for selecting the log data
            in ascending order.

        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTestEvaluator.cs:

          . Bug fix where inserting the relations into the evaluator caused
            an exception.

        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittestchart.aspx.cs:

          . Bug fix where the connection to the database for the page was
            not open.

Wed Sep 24 01:18:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTesting/LogFormatTable.cs:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTesting/RelationTable.cs:

          . Tried to fix a bug where the state of the relation textbox is not
            saved when its first created. After (re)creating the textbox for the
            relations will the page safe the controls state. :-(

        * utils/BMW/website/styles/default.css:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Re-implemented the unit test specification portion of the page
            using a table layout. This helps ensure items align properly on
            the page.

          . Bug fix where it was impossible to delete an existing unit test
            from the database.
