@@ -1,3 +1,13 @@
+Wed Sep 24 05:11:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * utils/BMW/website/performance.aspx:
+
+          . Changed 'Unit Test' tab to 'Unit Testing'.
+
+        * utils/BMW/website/performance.aspx.cs:
+
+          . Removed unnecessary error message from console display.
+
 Wed Sep 24 04:42:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/website/performance.aspx:
